[tool.poetry]
name = "converter"
version = "0.1.0"
description = ""
authors = ["annadokuchaeva2002 <annadokuchaeva2002@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.3"
httpx = "^0.27.2"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
